<resources>
    <string name="app_name">Chuck Joker</string>

    // Network Strings
    <string name="network_error_string" />

    // Error Strings
    <string name="joke_body_error">Couldn\'t load joke</string>
    <string name="joke_error_missing_joke">Whoops!! This joke number does not appear to have a joke in the database.</string>
    <string name="joke_error_number_format_exception">Whoops!! Please enter a number.</string>

    // Debug Strings
    <string name="debug_wipe_database">Debug Wipe Database</string>
    <string name="debug_add_debug_joke">Debug add debug joke</string>

    // Joke Display Fragment Strings
    <string name="joke_display_fragment_joke_body_default_text">It looks like this is your first time running the app.  Give us a second to gather up some jokes!!</string>
    <string name="joke_display_fragment_check_new_button_text">Check for new jokes</string>
    <string name="joke_display_fragment_random_button_text">Get a random joke</string>

    // Ad Strings
    <string name="ads_test_banner_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    // Menu Overflow Strings
    <string name="menu_about_title">About</string>
    <string name="menu_preferences_title">Preferences</string>

    // About Dialog Strings
    <string name="about_title">Chuck Joker</string>
    <string name="about_version">"Version:   "</string>
    <string name="about_third_party_licenses">Third Party Licenses</string>
    <string name="about_gson_license_title">Gson License</string>
    <string name="about_gson_url">https://github.com/google/gson</string>
    <string name="about_gson_copyright">Copyright 2008 Google Inc.</string>
    <string name="about_license_dialog_title">"PSDev's License Dialog"</string>
    <string name="about_license_dialog_url">http://github.psdev.de/LicensesDialog/</string>
    <string name="about_license_dialog_copyright">Copyright 2013 Philip Schiffer</string>
    <string name="about_picasso_license_title">Picasso License</string>
    <string name="about_picasso_url">https://square.github.io/picasso/</string>
    <string name="about_picasso_copyright">Copyright 2013 Square, Inc.</string>
    <string name="about_timber_license_title">Timber License</string>
    <string name="about_timber_url">https://github.com/JakeWharton/timber</string>
    <string name="about_timber_copyright">Copyright 2013 Jake Wharton</string>
    <string name="about_okhttp_license_title">OkHttp License</string>
    <string name="about_okhttp_url">http://square.github.io/okhttp/</string>
    <string name="about_okhttp_copyright">Copyright 2016 Square, Inc.</string>

    <string name="about_backing_api_title">Backing Api:</string>
    <string name="about_backing_api_url">http://www.icndb.com</string>


    // Shared Preference Strings
    <string name="pref_show_joke_num_key">showJokeNumberKey</string>
    <string name="pref_show_joke_num_summary">Display the ID number of the current joke</string>
    <string name="pref_show_joke_num_title">Show Joke ID Number</string>

</resources>
